--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
 language: java
 jdk:
   - oraclejdk8
+
+install:
+  - wget https://github.com/oracle/graal/releases/download/vm-1.0.0-rc4/graalvm-ce-1.0.0-rc4-linux-amd64.tar.gz; tar -xzf graalvm-ce-1.0.0-rc4-linux-amd64.tar.gz; export PATH=$PWD/graalvm-ce-1.0.0-rc4/bin:$PATH; export JAVA_HOME=$PWD/graalvm-ce-1.0.0-rc4
